--- a/game/index.html
+++ b/game/index.html
@@ -37,6 +37,7 @@
         <script src='script/entity/unit.js'></script>
         <script src='script/entity/card.js'></script>
 
+        <script src='script/render.js'></script>
         <script src='script/util.js'></script>
         <script src='script/scenetitle.js'></script>
         <script src='script/game.js'></script>
